--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
-      "@/jes*": ["./src/*"]
+      "@jes/*": ["./src/*"]
     },
 
     /* Bundler mode */
